SUBDIRS= .

if WANT_SKELETON_TEST
SUBDIRS+=skeleton
endif

if WANT_ICMP_TEST
SUBDIRS+=icmp
endif

if WANT_DNS_TEST
SUBDIRS+=dns
endif

if WANT_TRACEROUTE_TEST
SUBDIRS+=traceroute
endif

if WANT_HTTP_TEST
SUBDIRS+=http
endif

if WANT_THROUGHPUT_TEST
SUBDIRS+=throughput
endif

if WANT_PYTHON
SUBDIRS+=python
endif
